--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">Simple Azure Site</a>
+              <a class="navbar-brand" href="#">PROINCOLOR</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li class="active"><a href="#">Inicio</a></li>
+                <li><a href="#about">Productos</a></li>
+                <li><a href="#contact">Contacto</a></li>
               </ul>
             </div>
           </div>
